--- a/css/cssVichom.css
+++ b/css/cssVichom.css
@@ -19,7 +19,7 @@
 
 .iframeVichomBackground {
 
-	background-color: #000;
+	background-color:#010101;
 
 }
 
@@ -83,7 +83,7 @@
 
 .vichomBienvenida {
 	  
-	  background-color: #fff;
+	  background-color:#fafafa;
 	  z-index:80;
 	  position:absolute;
 	  height:100%;
@@ -92,8 +92,7 @@
 	  display:block;
 }
 
-.vichomBienvenidaLogo {
-		
+.vichomBienvenidaLogo {	
 	padding-top: 60px;
 	padding-bottom: 60px;
 	width: 20em;
@@ -103,8 +102,6 @@
 
 
 .vichomBienvenidaFooter {
-		
-	/*background-color: #9465f3;*/
 	padding-bottom: 20px;
 }
 
@@ -131,7 +128,7 @@
 
 
 .vichomEsperaBackground {
-	background-color: #ffffff;
+	background-color:#fafafa;
 }
 
 
@@ -149,8 +146,7 @@
 
 
 .vichomCalificacion{
-	
-	  background-color: #fff;
+	  background-color:#fafafa;
 	  z-index:80;
 	  position:absolute;
 	  height:100%;
@@ -184,15 +180,13 @@
 
 
 .vichomChrome{
-	
-	  background-color: #fff;
+	  background-color:#fafafa;
 	  z-index:80;
 	  position:absolute;
 	  height:100%;
 	  width:100%;
 	  text-align:center;
 	  display:block;
-	
 }
 
 
@@ -216,7 +210,7 @@
 
 
 .vichomCortinilla{
-	background-color: #ffffff;
+	background-color:#fafafa;
 	opacity:0.9;
 	z-index:80;
 	position:absolute;
@@ -243,16 +237,13 @@
 
 
 .vichomHorarios{
-	
-	background-color: #fff;
+	background-color:#fafafa;
 	z-index:80;
 	position:absolute;
 	height:100%;
 	width:100%;
 	text-align:center;
-	display:block;
-	 
-	
+	display:block;	
 }
 
 
@@ -274,7 +265,7 @@
 
 
 .vichomAyudaventas{	
-	background-color: #fff;
+	background-color:#fafafa;
 	z-index:1;
 	position:absolute;
 	height:100%;
@@ -298,8 +289,7 @@
 
 
 .vichomRotar{
-	
-	  background-color: #fff;
+	  background-color:#fafafa;
 	  z-index:80;
 	  position:absolute;
 	  height:100%;
@@ -344,11 +334,6 @@
  
     z-index: 10;
 }
-
-
-
-
-
 
 
 /* @end */
