--- a/css/cssOmolds.css
+++ b/css/cssOmolds.css
@@ -10182,7 +10182,6 @@ hr {
 
 .cajonBotonCuadrado .title a {
     font-size: 14px;
-    color: rgba(1,1,1,0.1004071);
     line-height: normal;
     cursor: pointer;
 }
@@ -10951,6 +10950,15 @@ audio{
 
 
 /* @end */
+
+/* @group 
+ */
+
+
+
+/* @end */
+
+
 
 
 
