--- a/css/cssOmolds.css
+++ b/css/cssOmolds.css
@@ -10948,13 +10948,80 @@ audio{
 
 /* @end */
 
-/* @group 
- */
+/* @group DRAG DROP INTERFACE */
 
-
-
+#DrapDrodinterface{
+  position: relative;
+}
+#stackhive-placement
+{
+    position: fixed;
+    top:0px;
+    width: 100%;
+    background-color: white;
+    height: 50px;
+}
+#dragitemslist h3
+{
+    color: #ffffff;
+}
+#dragitemslist
+{
+    width: 100%;
+    left: 0px;
+    text-align: center;
+    background: #ff0060;
+    color: #ffffff;
+    height: 160px;
+}
+#dragitemslist + div
+{
+    margin-top: 0;
+    border-top: 2px dashed #5f042a;
+    min-height: 560px;
+}
+#dragitemslistcontainer
+{
+    list-style: none;
+    padding: 0px;
+}
+#dragitemslistcontainer > li
+{
+    display:inline-block;
+    margin-right:2px;
+    padding: 10px 15px;
+    cursor: move;
+    color: white;
+    border: 1px solid;
+    width: 120px;
+    color: #ffffff;
+    background-color: #ff0060;
+    text-shadow: 0px 1px 1px black;
+}
+#dragitemslistcontainer > li i
+{
+    font-size:40px;
+    margin-bottom:10px;
+}
+#dragitemslistcontainer > li p
+{
+    margin:0px;
+}
+#clientframe
+{
+    height:100%;
+    width:100%;
+}
+#clientframe-container
+{
+    height: -webkit-calc(100% - 220px);
+    height: calc(100% - 220px);
+    height: -moz-calc(100% - 220px);
+    height: -ms-calc(100% - 220px);
+    height: -o-calc(100% - 220px);
+    width: 100%;
+}
 /* @end */
-
 
 
 
