--- a/css/cssOmolds.css
+++ b/css/cssOmolds.css
@@ -26,11 +26,11 @@
 
  @font-face {
   font-family: 'IconOmolds';
-  src: url('/fonts/IconOmolds.eot?41341975');
-  src: url('/fonts/IconOmolds.eot?41341975#iefix') format('embedded-opentype'),
-       url('/fonts/IconOmolds.woff?41341975') format('woff'),
-       url('/fonts/IconOmolds.ttf?41341975') format('truetype'),
-       url('/fonts/IconOmolds.svg?41341975#fontello') format('svg');
+  src: url('https://omolds.github.io/assets/fonts/IconOmolds.eot?41341975');
+  src: url('https://omolds.github.io/assets/fonts/IconOmolds.eot?41341975#iefix') format('embedded-opentype'),
+       url('https://omolds.github.io/assets/fonts/IconOmolds.woff?41341975') format('woff'),
+       url('https://omolds.github.io/assets/fonts/IconOmolds.ttf?41341975') format('truetype'),
+       url('https://omolds.github.io/assets/fonts/IconOmolds.svg?41341975#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
