--- a/css/cssOmolds.css
+++ b/css/cssOmolds.css
@@ -10072,11 +10072,63 @@ hr {
 
 /* @end */
 
-
-
 /* @group MODAL CIRCULAR*/
 
 #idmodalCircular { 
+	
+	margin: 0 auto;
+	width: 250px;
+	height: 250px;
+	background: #ff0060;
+	
+	
+	/*estos tres valores deben ser la mitad del tamaño*/
+	-moz-border-radius: 150px;
+	-webkit-border-radius: 150px;
+	border-radius: 150px;
+	
+	left: 0px; top: 0px; bottom: 0px; right: 0px;
+	z-index: 100;
+}
+
+
+.modalCircularContenedor {
+  position: relative;
+
+
+}
+
+.modalCircularContenido {
+  position: absolute;
+  top: 50%;
+  transform: translateY(50%);
+
+}
+
+
+.modalCircularContenido .icon {
+
+	color: #ffffff;
+	font-size: 7em;
+
+}
+
+.modalCircularAltoIcono {
+	height: 93px;
+}
+
+.modalCircularAltoTexto {
+	height: 15px;
+    margin-top: -25px;
+}
+
+   
+
+/* @end */
+
+/* @group MODAL CUADRADA*/
+
+#idmodalCuadrada { 
 	
 	margin: 0 auto;
 	width: 250px;
