--- a/css/cssOmolds.css
+++ b/css/cssOmolds.css
@@ -10133,7 +10133,7 @@ hr {
 	margin: 0 auto;
 	width: 250px;
 	height: 250px;
-	background: #ff0060;
+	background: #46ff33;
 	
 	
 	/*estos tres valores deben ser la mitad del tamaño*/
