--- a/css/cssVichom.css
+++ b/css/cssVichom.css
@@ -330,10 +330,10 @@
 }
 
 
-/*.vichomBotonCircularColZindex {
+.vichomBotonCircularColZindex {
  
-    z-index: 10;
-}*/
+    z-index: 12;
+}
 
 
 /* @end */
