--- a/css/cssVichom.css
+++ b/css/cssVichom.css
@@ -31,7 +31,7 @@
 	min-height: 100px;
 	/*max-width: 560px;*/
 	border: 2px solid white;
-	background: #808080 url(https://omolds.github.io/assets/images/vichom/videoNoCargado.png) no-repeat center center;
+	background: transparent url(https://omolds.github.io/assets/images/vichom/videoNoCargado.png) no-repeat center center;
 	background-size: 200% auto;
 	position: relative;
 	z-index: 10;
@@ -46,7 +46,7 @@
 	min-height: 100px;
 	/*max-width: 560px;*/
 	border: 2px solid white;
-	background: #808080 url(https://omolds.github.io/assets/images/vichom/videoNoCargado.png) no-repeat center center;
+	background: transparent url(https://omolds.github.io/assets/images/vichom/videoNoCargado.png) no-repeat center center;
 	background-size: 200% auto;
 	position: relative;
 	z-index: 10;
@@ -116,7 +116,7 @@
 	width: 100%;
 	height: 270px;
 	margin: auto;
-	background: #808080 url(https://raw.githubusercontent.com/omolds/assets/master/images/vichom/videoNoCargado.png) no-repeat center center;
+	background: transparent url(https://raw.githubusercontent.com/omolds/assets/master/images/vichom/videoNoCargado.png) no-repeat center center;
 }
 
 
