--- a/css/cssOmolds.css
+++ b/css/cssOmolds.css
@@ -9661,6 +9661,11 @@ input,  textarea {
     
 }
 
+.bordePrincipal {
+	border-color: 3px;
+	color: green;  
+}
+
 
 .bordeSecundario {
 	border-color: 3px;
