--- a/css/cssOmolds.css
+++ b/css/cssOmolds.css
@@ -9898,6 +9898,10 @@ a:hover {
   background-color:#858585;
 }
 
+.colorCajasSecundarioClaro {
+  background-color:#CACACA;
+}
+
 .colorCajasBlancas {
   background-color:#fafafa;
 }
