--- a/css/cssMeetom.css
+++ b/css/cssMeetom.css
@@ -1,7 +1,7 @@
 
 .headerClaroMeetom {
     padding-bottom:120px;
-    background: url(https://omolds.github.io/assets/images/meetom/imgHome.jpg)no-repeat;
+    /*background: url(https://omolds.github.io/assets/images/meetom/imgHome.jpg)no-repeat;*/
     padding-top: 60px;
 }
 
