--- a/css/cssMeetom.css
+++ b/css/cssMeetom.css
@@ -12,3 +12,12 @@
 .headerClaroMeetom .txts{
    	margin-top: 60px;	     text-align: left;
 }
+
+
+.imgStickyScroll{
+	width: 200px;
+	position: -webkit-sticky;
+	position: sticky;
+	top: 0;
+   	
+}
