--- a/css/cssMeetom.css
+++ b/css/cssMeetom.css
@@ -19,4 +19,5 @@
 	position: -webkit-sticky;
 	position: sticky;
 	top: 0;	
+	/*stickytop en bootstrap deja el objeto por encima de cualquiera cosa como un super zindex*/
 }
