--- a/css/cssOmolds.css
+++ b/css/cssOmolds.css
@@ -9804,7 +9804,7 @@ input,  textarea {
   width:100%;
   background-color: #5f042a;
   text-align:center;
-  position:absolute;
+  position: fixed;
   bottom:0px;
   padding-top:8px;
   padding-bottom:8px;
