--- a/css/cssOmolds.css
+++ b/css/cssOmolds.css
@@ -10471,6 +10471,8 @@ hr {
     height:30px;
     color:#FF0060;
     margin-top: 10px;
+    padding-right: 5px;
+    padding-left: 5px;
     
     
 }
