--- a/css/cssOmolds.css
+++ b/css/cssOmolds.css
@@ -5245,7 +5245,7 @@ a.bg-dark:focus, a.bg-dark:hover {
 }
 
 .border {
-  border:1px solid #e9ecef !important;
+  border:1px solid #cacaca !important;
 }
 
 .border-0 {
@@ -9966,6 +9966,9 @@ a:hover {
   width:90%;
 }
 
+.tamanoCajas100porciento {
+  width:100%;
+}
 
 
 
@@ -11349,29 +11352,28 @@ audio{
     padding: 0px 0px;
     margin: 0px 0px;
     font-size: 1px;
-    /* color: #ff0060; */
     text-align: left;
     list-style: none;
-    background-color: #cacaca;
-    /* background-clip: padding-box; */
-    /* border: 2px solid #858585; */
-    /* border-color: #ff0060; */
-    /* border: solid; */
-    border-bottom: 1px;
+    background-color: #fafafa;
+    border: 1px;
+    border-left: solid 1px #cacaca;
     border-radius: 0px;
+}
+
+
+.dropdown-menu>li>a {
+    display: block;
+    padding: 3px 13px;
+    clear: both;
+    font-weight: 400;
+    line-height: 1.42857143;
+    color: #333;
+    white-space: nowrap;
 }
 
 
 .dropdown-submenu {
   position: relative;
-}
-
-
-.dropdown-submenu .dropdown-menu {
-  top: 0;
-  left: 100%;
-  margin-left: .1rem;
-  margin-right: .1rem;
 }
 
 
@@ -11389,17 +11391,6 @@ audio{
     position: absolute;
     right: auto;
     top: 0.6em;
-}
-
-
-.dropdown-menu>li>a {
-    display: block;
-    padding: 3px 13px;
-    clear: both;
-    font-weight: 400;
-    line-height: 1.42857143;
-    color: #333;
-    white-space: nowrap;
 }
 
 
